Increase security by offboarding the PIN

--- a/sample.env
+++ b/sample.env
@@ -14,12 +14,5 @@
 # pkcs11-tool --module /opt/proCertumCardManager/sc30pkcs11-3.0.6.72-MS.so --list-objects
 # ```
 #
-# In Windows `certmgr.msc` this is the "Subject Key Identifier" field.
+# Using Windows `certmgr.msc` this is the "Subject Key Identifier" field.
 KEY_ID=your-key-id
-
-# PIN for the hardware token.  In plain-text - do not encode.
-#
-# You should NEVER reveal this value publicly or commit it to source control.
-# This project's .gitignore file excludes the `.env` file to help prevent this.
-# Do NOT store this in `sample.env`.
-PIN=your-pin
